Fix balanced logo and header spacing

--- a/static/less/modals.less
+++ b/static/less/modals.less
@@ -41,7 +41,7 @@
       width: 30px;
       height: 27px;
       margin-top: 20px;
-      margin-bottom: -10px;
+      margin-bottom: 10px;
     }
 
     .close {
